# bully-reasonix

./: .gitignore  CLAUDE.md  README.md  REASONIX.md  pyproject.toml  reasonix.toml
.reasonix/: settings.json
docs/: live-smoke.md  rule-authoring.md  telemetry.md
docs/superpowers/plans/: 2026-06-09-bully-reasonix-m1-foundation.md  2026-06-09-bully-reasonix-m2-semantic.md  2026-06-09-bully-reasonix-m3-session.md  2026-06-09-bully-reasonix-m4-skills.md  2026-06-09-bully-reasonix-w2-integration.md
docs/superpowers/specs/: 2026-06-09-bully-reasonix-port-design.md
examples/rules/: django.yml  fastapi.yml  go.yml  nextjs.yml  rails.yml  react-ts.yml  rust-cli.yml
scripts/: dogfood.sh  lint.sh
skills/bully/: SKILL.md
skills/bully-author/: SKILL.md
skills/bully-evaluator/: SKILL.md
skills/bully-init/: SKILL.md
skills/bully-review/: SKILL.md
skills/bully-scheduler/: SKILL.md
src/bully/: __init__.py  __main__.py
src/bully/cli/: __init__.py  args.py  baseline.py  coverage.py  debt.py  doctor.py  explain.py  guide.py  hook_mode.py  log_verdict.py  reasonix_hook.py  session.py  stop.py  validate.py
src/bully/config/: __init__.py  loader.py  parser.py  scope.py  skip.py
src/bully/diff/: __init__.py  analysis.py  context.py  pending.py
tests/: conftest.py  test_bully_evaluator_skill.py  test_content_path.py  test_doctor.py  test_dogfood.py  test_lint_script.py  test_log_verdict.py  test_pending_diff.py  test_reasonix_hook.py  test_reasonix_payload.py  test_semantic_gate.py  test_session_rules.py  test_skills_port.py  test_verdict_cache.py
(+17 files in other folders)
