[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bully-reasonix"
version = "0.1.0"
description = "Agentic linter for the Reasonix (DeepSeek) coding harness — port of bully"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8.0", "ast-grep-cli>=0.39"]

[project.scripts]
bully = "bully.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"src/bully/__init__.py" = ["F401", "E402"]
"src/bully/**/__init__.py" = ["F401"]
"tests/*" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
